go/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatbot-fe
  namespace: emojichat # {"$kpt-set":"namespace"}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chatbot-fe
  template:
    metadata:
      labels:
        app: chatbot-fe
    spec:
      # TODO(jlewi): Should add a health check
      containers:
      - name: fe
        image: gcr.io/issue-label-bot-dev/chatbot-fe:2209314-dirty@sha256:b8c73274dfab0ec755edf4021cc90a242b3fd85f6f3fe2b5db21400fb886b293 # {"$kpt-set":"image"}
        command:
        - /server
        - serve
        # ISTIO binds port 80
        - --port=8080
        - --static-files=/static
        resources:
          requests:
            memory: "1Gi"
            cpu: "1"
      serviceAccountName: default
