go/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: chatbot-fe
  name: chatbot-fe
  namespace: emojichat # {"$kpt-set":"namespace"}
spec:
  selector:
    app: chatbot-fe
  ports:
  - name: http
    port: 80
    targetPort: 8080
  type: ClusterIP
